<resources>
    <string name="app_name">Fain Beta</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Submit</string>
    <string name="title_notifications">Notifications</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="lokasi_ditemukan">Lokasi Ditemukan</string>
    <string name="deskripsi_ciri_barang">Deskripsi/Ciri Barang</string>
    <string name="submit_barang">Submit Barang</string>
    <string name="batal">Batal</string>
    <string name="submit">SUBMIT BARANG</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_ditemukan">Tanggal Ditemukan</string>
    <string name="textsubmit">Masukan data barang yang telah anda temukan dengan benar dan tepat</string>
    <string name="masuk">Mulai</string>
    <string name="menemukanbarang">Menemukan Barang Hilang?</string>
    <string name="kembalikan">Mari kembalikan kepada pemilik aslinya, dan dapatkan manfaatnya</string>
    <string name="klaim_barang">Klaim Barang</string>
</resources>
